sumo/tests/jtrrouter/errors/default_arrivalspeed_false/errors.jtrrouter
Error: Invalid arrivalspeed definition;
 must be one of ("current", or a float>0)
Quitting (on error).
